# python_sqlite_formation

./: LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
python_sqlite_formation/: db_manager.py  main.py
sql/: database.db
